feat: Angular cross-cutting concerns + Java build fixes
## Angular (Prompt 26)
- ThemingService: CSS custom properties, dark/light/system modes, tenant branding, PrimeNG overrides
- DarkModeToggleComponent: cycles light/dark/system with localStorage persistence
- ToastService: wraps PrimeNG MessageService with success/info/warn/error helpers
- OfflineService: online/offline detection via fromEvent, reconnection banner support
- IdleService: 15-min idle timeout with 1-min warning countdown, auto-logout
- GlobalErrorHandler: HTTP error mapping (400/401/403/404/429/5xx) to toast/redirect
- ErrorInterceptor: 404 non-API requests redirect to /not-found
- i18n: 328 flat dot-notation keys across en/hi/ta translations; resolveKey supports both flat and nested
- All 3 app configs: MessageService provider added
- All 3 AppComponents: Toast, offline banner, IdleService integration
- All 3 styles.scss: dark mode overrides, responsive breakpoints (320/768/1024), ag-Grid dark theme
- All 3 ngsw-config.json: Service Worker for static asset + branding API caching
- 7 spec files: ThemingService, i18n, GlobalErrorHandler, ToastService, OfflineService, IdleService, lazy-routes
- Login portal: full page flow components (login-id, password, TOTP, FIDO, MFA selector, backup code, onboarding wizard, account-locked, error-page, tenant-input, auth-success-redirect, password-expired, soft-token-wait)
- Self-service portal: full page flow (dashboard, profile, password, MFA, sessions, access-request, activity, forgot-password, recovery, my-access-requests)
- Admin console: full page flow (dashboard, users, groups, roles, policies, sessions, credentials, devices, audit, entitlements, settings)

## Java backend build fixes
- innait-common: serialVersionUID added to 4 exception classes
- InnaITAuthenticationToken: serialVersionUID, ArrayList<String> fields, @SuppressWarnings("this-escape")
- JwtAuthenticationFilter (common + api-gateway): new URL(String) → URI.create().toURL()
- EventEnvelope: ad